--- a/dprojx/templates/dappx/base.html
+++ b/dprojx/templates/dappx/base.html
@@ -14,7 +14,7 @@
     <div class="container">
       <ul class="nav navbar-nav">
         {# Django Home Link / Admin Link / Register Link#}
-        <li><a class="navbar-brand" href="{% url 'index' %}">DJANGO</a></li>
+        <li><a class="navbar-brand" href="{% url 'index' %}">Conference Management</a></li>
         <li><a class="navbar-link" href="{% url 'admin:index' %}">Admin</a></li>
         <li><a class="navbar-link" href="{% url 'dappx:register' %}">Register</a></li>
         {# Some logic on what to display for last item#}
@@ -29,6 +29,21 @@
   <div class="container">
     {% block body_block %}
     {% endblock %}
+  </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-2">
+      {% block sidebar %}
+        <ul class="sidebar-nav">
+          <li><a href="{% url 'index' %}">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="{% url 'articles' %}">All articles</a></li>
+          <li><a href="">All authors</a></li>
+        </ul>
+     {% endblock %}
+      </div>
+      <div class="col-sm-10 ">{% block content %}{% endblock %}</div>
+    </div>
   </div>
 </body>
 
