Added debugtool, author's articles, profile template

--- a/dprojx/templates/dappx/article_detail.html
+++ b/dprojx/templates/dappx/article_detail.html
@@ -3,7 +3,7 @@
 {% block content %}
   <h1>Title: {{ article.title }}</h1>
 
-  <p><strong>Author:</strong> <a href="">{{ article.author }}</a></p> <!-- author detail link not yet defined -->
+  <p><strong>Author:</strong> <a href="{{ article.author.get_absolute_url }}">{{ article.author }}</a></p> 
   <p><strong>Abstract:</strong> {{ article.abstract }}</p>
   <p><strong>Subject:</strong> {% for subject in article.subject.all %} {{ subject }}{% if not forloop.last %}, {% endif %}{% endfor %}</p>  
 
